...
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/user_icon"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_outline"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="10dp"
...
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_outline"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
...
