<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_outline"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="10dp"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_outline"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_outline"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password_ensure"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_identity"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_identity"
        style="@style/sp_identity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/identity"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_field"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fl_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        app:flexWrap="wrap">

<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginRight="5dp"-->
<!--            android:layout_marginLeft="5dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:background="@drawable/onclick_btn"-->
<!--            android:text="标签1"-->
<!--            android:textSize="18sp"/>-->
<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginRight="5dp"-->
<!--            android:layout_marginLeft="5dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:background="@drawable/onclick_btn"-->
<!--            android:text="标签211"-->
<!--            android:textSize="18sp"/>-->
<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginRight="5dp"-->
<!--            android:layout_marginLeft="5dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:background="@drawable/onclick_btn"-->
<!--            android:text="标签211"-->
<!--            android:textSize="18sp"/>-->
<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginRight="5dp"-->
<!--            android:layout_marginLeft="5dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:background="@drawable/onclick_btn"-->
<!--            android:text="标签31"-->
<!--            android:textSize="18sp"/>-->
<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginRight="5dp"-->
<!--            android:layout_marginLeft="5dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:background="@drawable/onclick_btn"-->
<!--            android:text="标签1114"-->
<!--            android:textSize="18sp"/>-->
    </com.google.android.flexbox.FlexboxLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textSize="20sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
